test item info sets to label

--- a/ToDoTDD/Base.lproj/Main.storyboard
+++ b/ToDoTDD/Base.lproj/Main.storyboard
@@ -104,6 +104,27 @@
                                     <constraint firstAttribute="height" constant="128" id="Swa-bi-m8S"/>
                                 </constraints>
                             </mapView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8dS-jU-xwD">
+                                <rect key="frame" x="372" y="86" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3bX-AO-byb">
+                                <rect key="frame" x="332" y="160" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="68q-Hr-ZbM">
+                                <rect key="frame" x="342" y="196" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -115,6 +136,9 @@
                         <viewLayoutGuide key="safeArea" id="m5N-qI-dVB"/>
                     </view>
                     <connections>
+                        <outlet property="dateLabel" destination="8dS-jU-xwD" id="0hP-k9-aEU"/>
+                        <outlet property="descriptionLabel" destination="68q-Hr-ZbM" id="0a9-wt-dIY"/>
+                        <outlet property="locationLabel" destination="3bX-AO-byb" id="Bpx-s2-JwV"/>
                         <outlet property="mapView" destination="HOv-vQ-7Qz" id="7Qk-TW-oH0"/>
                         <outlet property="titleLabel" destination="S4y-2V-Buc" id="PAV-Yc-uyi"/>
                     </connections>
